--- a/.gitattributes
+++ b/.gitattributes
@@ -57,7 +57,6 @@
 *.yaml linguist-documentation=false
 *.yaml linguist-language=YAML
 # Markdown
-# Do not include, as it would become the 100% dominant language and would hide all the other languages as "other"
 *.md linguist-detectable=false
 *.md linguist-documentation=false
 *.md linguist-language=Markdown
@@ -111,11 +110,11 @@
 *.wiki linguist-documentation=false
 *.wiki linguist-language=WikiText
 # BibTeX
-*.bib linguist-detectable=false
+*.bib linguist-detectable=true
 *.bib linguist-documentation=false
 *.bib linguist-language=BibTeX
 # TeX
-*.tex linguist-detectable=false
+*.tex linguist-detectable=true
 *.tex linguist-documentation=false
 *.tex linguist-language=TeX
 # Desktop entry
@@ -164,7 +163,7 @@
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2022, Monday, December 26th at 4:30 pm PST)
+# Line count (including blank lines and compiler line): 170
 # End of script
